# nas-media-catalog

./: .gitignore  AGENTS.md  README.md  SETUP.md  env.example  pyproject.toml  run_server.py
api/: README.md  env.example  pyproject.toml  run_tests.py  smb_cli.py
api/src/nas_media_catalog/: __init__.py  config.py  database.py  main.py  playlist_generator.py
api/test/e2e/: test_e2e_integration.py
api/test/integration/: test_integration_upnp_mocked.py
docs/: architecture.md
e2e/: .gitignore  README.md  global-setup.ts  global-teardown.ts  package-lock.json  package.json  playwright.config.ts
e2e/tests/: api-integration.spec.ts  catalog-browsing.spec.ts  mrl-functionality.spec.ts  playlist-management.spec.ts  playlist-operations.spec.ts
scripts/: dev-start.sh  test-e2e.sh
src/nas_media_catalog/: config.py  database.py  main.py  playlist_generator.py  upnp_client.py
test/: __init__.py  conftest.py
test/e2e/: __init__.py  test_e2e_upnp_discovery.py
test/integration/: __init__.py
test/unit/: __init__.py  test_basic.py
ui/: .gitignore  README.md  package-lock.json  package.json  server.js
ui/public/: app.js  index.html  styles.css
